--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
     }
   ],
   "devDependencies": {
+    "@blockstack/clarity-native-bin": "^0.3.7",
     "@size-limit/preset-small-lib": "^4.9.1",
     "husky": "^4.3.8",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@blockstack/clarity": "^0.3.7"
   }
 }
