--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
-    "analyze": "size-limit --why"
+    "analyze": "size-limit --why",
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {},
   "husky": {
@@ -25,12 +26,7 @@
       "pre-commit": "tsdx lint"
     }
   },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
-  },
+  "prettier": "@stacks/prettier-config",
   "name": "ft-standard",
   "author": "Hank Stoever",
   "module": "dist/ft-standard.esm.js",
@@ -45,15 +41,17 @@
     }
   ],
   "devDependencies": {
-    "@blockstack/clarity-native-bin": "^0.3.7",
+    "@clarigen/cli": "0.0.4",
+    "@clarigen/test": "0.0.4",
     "@size-limit/preset-small-lib": "^4.9.1",
+    "@stacks/eslint-config": "1.0.9",
+    "@stacks/prettier-config": "0.0.8",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.8",
+    "prettier": "^2.0.5",
     "size-limit": "^4.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
-  },
-  "dependencies": {
-    "@blockstack/clarity": "^0.3.7"
   }
 }
